--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         </div>
 
         <div id="product2">
-            <h1>Using them together sets them aparts.</h1>
-            <p>Apple devices work togetherso seamlessly, it almost feels like magic.</p>
+            <h1>iPad Pro</h1>
+            <p>Advance AI performance and game-changing graphics.</p>
            <div id="product2-btn">
-              <button>Learn more</button>
+              <button>Learn more</button> 
               <button id="pro-buy-btn">Buy</button>
            </div>
           </div>
 
           <div id="product3">
-            <h1>Using them together sets them aparts.</h1>
-            <p>Apple devices work togetherso seamlessly, it almost feels like magic.</p>
+            <h1>   <i class="ri-apple-fill"></i> Watch Series 11</h1>
+            <p>The Ultimate Way to Watch Your Health</p>
            <div id="product3-btn">
               <button>Learn more</button>
               <button id="pro-buy-btn">Buy</button>
@@ -80,8 +80,8 @@
           </div>
 
           <div id="product4">
-            <h1>Using them together sets them aparts.</h1>
-            <p>Apple devices work togetherso seamlessly, it almost feels like magic.</p>
+            <h1>AirPods Pro 3</h1>
+            <p>The World Best in-air noise Cancellation</p>
            <div id="product4-btn">
               <button>Learn more</button>
               <button id="pro-buy-btn">Buy</button>
@@ -89,8 +89,8 @@
           </div>
 
           <div id="product5">
-            <h1>Using them together sets them aparts.</h1>
-            <p>Apple devices work togetherso seamlessly, it almost feels like magic.</p>
+            <h1>  <i class="ri-apple-fill"></i>Trade In</h1>
+            <p>Get upto $190 to $560 When yoou trade in iPhone 13 and Higher.</p>
            <div id="product5-btn">
               <button>Learn more</button>
               <button id="pro-buy-btn">Buy</button>
@@ -98,8 +98,8 @@
           </div>
 
           <div id="product6">
-            <h1>Using them together sets them aparts.</h1>
-            <p>Apple devices work togetherso seamlessly, it almost feels like magic.</p>
+            <h1><i class="ri-apple-fill"></i>Card</h1>
+            <p>Get Daily cashback when You Buy something through Apple card.</p>
            <div id="product6-btn">
               <button>Learn more</button>
               <button id="pro-buy-btn">Buy</button>
@@ -109,21 +109,8 @@
          
     </div>
 
-<!--    
-    <div id="tv-section">
-        <div id="tv1">
-            <h1>Apple TV+</h1>
-        </div>
-        <div id="tv2"></div>
-        <div id="tv4"></div>
-        <div id="tv5"></div>
-        <div id="tv6"></div>
-        <div id="tv7"></div>
-        <div id="tv8"></div>
-        <div id="tv9"></div>
-        <div id="tv10"></div>
-    </div>
 
-</body> -->
+  
+</body>
 
 </html>
