--- a/index.html
+++ b/index.html
@@ -108,8 +108,86 @@
         
          
     </div>
+   
+   <div class="main-tv-section">
+
+    <div id="tv-section">
+        <img src="https://is1-ssl.mzstatic.com/image/thumb/S9dLxU_nCvhomqGnI3-d_g/1378x774.jpg"/>
+        <div class="hide-section">
+            <button>Learn More</button>
+            <p>Watch More Web series through the Apple Web Store .</p>
+        </div>
+    </div>
+
+    <div id="tv-section">
+        <img src="https://is1-ssl.mzstatic.com/image/thumb/Features/v4/97/3c/ad/973cad18-1b22-8b11-41d0-0ce92fd4317b/eeb71960-77a5-4cec-a541-2fc280c1a128.png/1378x774.jpg"/>
+        <div class="hide-section">
+            <button>Learn More</button>
+            <p>Watch More Web series through the Apple Web Store .</p>
+        </div>
+    </div>
+
+    <div id="tv-section">
+        <img src="https://is1-ssl.mzstatic.com/image/thumb/RUnF4CVb7Bj5jvPpsnH2Zg/1378x774.jpg"/>
+        <div class="hide-section">
+            <button>Learn More</button>
+            <p>Watch More Web series through the Apple Web Store .</p>
+        </div>
+    </div>
+
+    <div id="tv-section">
+        <img src="https://is1-ssl.mzstatic.com/image/thumb/fhmbI8Mv8fXjBW0bVcW2xg/1378x774.jpg"/>
+        <div class="hide-section">
+            <button>Learn More</button>
+            <p>Watch More Web series through the Apple Web Store .</p>
+        </div>
+    </div>
+   </div>
 
 
+   <footer>
+    <div class="footer-container">
+      <div class="footer-links">
+        <div>
+          <h4>Shop and Learn</h4>
+          <ul>
+            <li><a href="#">Mac</a></li>
+            <li><a href="#">iPhone</a></li>
+            <li><a href="#">iPad</a></li>
+            <li><a href="#">Watch</a></li>
+            <li><a href="#">AirPods</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Services</h4>
+          <ul>
+            <li><a href="#">Apple Music</a></li>
+            <li><a href="#">Apple TV+</a></li>
+            <li><a href="#">iCloud</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Account</h4>
+          <ul>
+            <li><a href="#">Manage Your Apple ID</a></li>
+            <li><a href="#">Apple Store Account</a></li>
+            <li><a href="#">iCloud.com</a></li>
+          </ul>
+        </div>
+      </div>
+  
+      <div class="footer-bottom">
+        <p>© 2025 Apple Inc. All rights reserved.</p>
+        <div class="footer-bottom-links">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Sales and Refunds</a>
+          <a href="#">Legal</a>
+          <a href="#">Site Map</a>
+        </div>
+      </div>
+    </div>
+  </footer>
   
 </body>
 
